# observability

./: .gitignore  README.md  docker-compose.yml  todo
demo/: Cargo.toml  Dockerfile  Readme.md  docker_entry.sh
demo/src/: client.rs  lib.rs  main.rs  server.rs
elk/: .env  Readme.md  docker-compose.yml  otel-collector-config.yaml
jaeger/: Readme.md  docker-compose.yml  otel-collector-config.yaml
parseable/: Readme.md  docker-compose.yml  otel-collector-config.yaml
prometheus/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
