[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# other
axum = { version = "0.7"}
tokio ={ version = "1.40", features = [ "full"]}
rand = { version = "*" }
reqwest = {version = "0.12"}
# CLI
clap = {version = "4.5", features = ["derive"]}

# tracings 
tracing = "0.1"
tracing-opentelemetry = "0.27"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

# OpenTelemery
opentelemetry = { version = "0.26", features = ["trace", "logs", "metrics"]}
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version="0.26",  features = ["tonic",  "metrics", "logs"] }
opentelemetry-semantic-conventions = { version="0.26" }
#opentelemetry-appender-log = "0.26"
opentelemetry-appender-tracing = "0.26.0"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
metrics-util = "0.18.0"

# lazy error "handling"
anyhow = { version = "1.0"}